Storyboard overlay improvements: add UI hiding, bidirectional line sync, path trimming, and state synchronization